--- a/second/index.html
+++ b/second/index.html
@@ -2,9 +2,44 @@
 <html>
     <head>
         <meta charset="utf-8"/>
-        <title></title>
+        <link rel="stylesheet" href="css/main.css"/>
+        <title>jobboard-landing</title>
     </head>
     <body>
-	
+        <div class="header">
+            <div class="header__logo">
+                <div class="header__logo__wraper">
+                    <img class="header__logo__wraper__img" src="img/header_logo.png"/>
+                    <div class="header__logo__wraper__Joby">Joby</div>
+                    <div class="header__logo__wraper__Job-Finder">Job Finder</div>
+                </div>
+            </div>
+
+            <div class="header__nav">
+                <ul class="header__nav__ul">
+                    <li class="header__nav__ul__li"><a class="header__nav__ul__li__a" href="#">Freelancers</a></li>
+                    <li class="header__nav__ul__li"><a class="header__nav__ul__li__a" href="#">Employers</a></li>
+                    <li class="header__nav__ul__li"><a class="header__nav__ul__li__a" href="#">Services</a></li>
+                    <li class="header__nav__ul__li"><a class="header__nav__ul__li__a" href="#">Portfolio</a></li>
+                    <li class="header__nav__ul__li"><a class="header__nav__ul__li__a" href="#">About Us</a></li>
+                    <li class="header__nav__ul__li"><a class="header__nav__ul__li__a" href="#">Team</a></li>
+                    <li class="header__nav__ul__li"><a class="header__nav__ul__li__a--active" href="#">Become Freelancer</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="section">
+            <div class="section__parallax">
+                <h1 class="section__parallax__title">
+                    <span class="section__parallax__title--green-color">Where will</span> great work
+                    <div class="section__parallax__title--green-color">take you?</div>
+                </h1>
+                <div class="section__parallax__under-title">Find freelancers to tackle any job, any size, any time</div>
+                <a class="section__parallax__get-sarted" href="#">GET STARTED</a>
+            </div>
+        </div>
+
+
+        <div class="footer"></div>
     </body>
 </html>
