--- a/second/index.html
+++ b/second/index.html
@@ -7,24 +7,27 @@
     </head>
     <body>
         <div class="header">
-            <div class="header__logo">
-                <div class="header__logo__wraper">
+            <div class="header_wraper">
+                <a class="header__logo__wraper" href="#">
                     <img class="header__logo__wraper__img" src="img/header_logo.png"/>
                     <div class="header__logo__wraper__Joby">Joby</div>
                     <div class="header__logo__wraper__Job-Finder">Job Finder</div>
-                </div>
+                </a>
             </div>
 
-            <div class="header__nav">
-                <ul class="header__nav__ul">
-                    <li class="header__nav__ul__li"><a class="header__nav__ul__li__a" href="#">Freelancers</a></li>
-                    <li class="header__nav__ul__li"><a class="header__nav__ul__li__a" href="#">Employers</a></li>
-                    <li class="header__nav__ul__li"><a class="header__nav__ul__li__a" href="#">Services</a></li>
-                    <li class="header__nav__ul__li"><a class="header__nav__ul__li__a" href="#">Portfolio</a></li>
-                    <li class="header__nav__ul__li"><a class="header__nav__ul__li__a" href="#">About Us</a></li>
-                    <li class="header__nav__ul__li"><a class="header__nav__ul__li__a" href="#">Team</a></li>
-                    <li class="header__nav__ul__li"><a class="header__nav__ul__li__a--active" href="#">Become Freelancer</a></li>
+            <div class="header_wraper">
+                <ul class="header__nav-ul">
+                    <li class="header__nav-ul__li"><a class="header__nav-ul__li__a" href="#">Freelancers</a></li>
+                    <li class="header__nav-ul__li"><a class="header__nav-ul__li__a" href="#">Employers</a></li>
+                    <li class="header__nav-ul__li"><a class="header__nav-ul__li__a" href="#">Services</a></li>
+                    <li class="header__nav-ul__li"><a class="header__nav-ul__li__a" href="#">Portfolio</a></li>
+                    <li class="header__nav-ul__li"><a class="header__nav-ul__li__a" href="#">About Us</a></li>
+                    <li class="header__nav-ul__li"><a class="header__nav-ul__li__a" href="#">Team</a></li>
                 </ul>
+            </div>
+
+            <div class="header_wraper">
+                <a class="header__wraper__Become-btn" href="#">Become Freelancer</a>
             </div>
         </div>
 
@@ -34,9 +37,17 @@
                     <span class="section__parallax__title--green-color">Where will</span> great work
                     <div class="section__parallax__title--green-color">take you?</div>
                 </h1>
-                <div class="section__parallax__under-title">Find freelancers to tackle any job, any size, any time</div>
+
+                <div class="section__parallax__under">
+                    <div class="section__parallax__under__line"></div>
+                    <div class="section__parallax__under__title">Find freelancers to tackle any job, any size, any
+                        time
+                    </div>
+                </div>
+
                 <a class="section__parallax__get-sarted" href="#">GET STARTED</a>
             </div>
+
         </div>
 
 
