Added address management

--- a/shop.loc/index.html
+++ b/shop.loc/index.html
@@ -19,15 +19,17 @@
                     <div class='collapse navbar-collapse' id='bs-example-navbar-collapse-2'>
                         <ul class='nav navbar-nav'>
                             <li><a href='#/'>Home</a></li>
-
+                            <!--
                             <li class='active'><a href='#'>Link <span class='sr-only'>(current)</span></a></li>
                             <li><a href='#'>Link</a></li>
+                            -->
 
                         </ul>
                         <ul class='nav navbar-nav navbar-right'>
 
-                            <li><a href='#/orders'>Cart <span class='badge'>3</span></a></li>
+                            <li><a href='#/cart'>Cart <span class='badge'>3</span></a></li>
                             <li><a href='#/profile'>Profile</a></li>
+                            <li><a href='#/addresses'>Addresses</a></li>
                             <li><a href='#/logout'>Logout</a></li>
 
                             <li><a href='#/login'>Login</a></li>
