Added History of orders

--- a/shop.loc/index.html
+++ b/shop.loc/index.html
@@ -27,14 +27,12 @@
                         </ul>
                         <ul class='nav navbar-nav navbar-right'>
                             <li><a href='#/cart'>Cart <span class='badge'>3</span></a></li>
-
+                            <li><a href='#/orders'>Orders History</a></li>
                             <li><a href='#/profile'>Profile</a></li>
                             <li><a href='#/addresses'>Addresses</a></li>
                             <li><a href='#/logout'>Logout</a></li>
-
                             <li><a href='#/login'>Login</a></li>
                             <li><a href='#/registration'>Registration</a></li>
-
                         </ul>
                     </div>
                 </div>
