Added Admins orders history

--- a/shop.loc/pages/cart/cart.html
+++ b/shop.loc/pages/cart/cart.html
@@ -90,6 +90,7 @@
     <link href='./css/jquery-ui-1.12.1.custom.min.css' rel='stylesheet' type='text/css'/>
     <script src='./js/jquery-ui-1.12.1.custom.min.js'></script>
     <link rel='stylesheet' type='text/css' href='./pages/home/home.css'/>
+    <script src='./pages/home/home.js'></script>
 
     <link rel='stylesheet' type='text/css' href='./pages/cart/cart.css'/>
     <script src='./pages/cart/cart.js'></script>
