--- a/shop.loc/index.html
+++ b/shop.loc/index.html
@@ -8,26 +8,25 @@
         <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.6.3/angular.min.js'></script>
         <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.6.3/angular-route.min.js'></script>
 
+        <link rel='stylesheet' type='text/css' href='./css/index.css'/>
         <script src='./js/index.js'></script>
 
         <title>hello</title>
     </head>
     <body ng-controller='myController'>
+        <div class='loading'></div>
         <header>
             <nav class='navbar navbar-default'>
                 <div class='container-fluid'>
                     <div class='collapse navbar-collapse' id='bs-example-navbar-collapse-2'>
                         <ul class='nav navbar-nav'>
                             <li><a href='#/'>Home</a></li>
-                            <!--
-                            <li class='active'><a href='#'>Link <span class='sr-only'>(current)</span></a></li>
-                            <li><a href='#'>Link</a></li>
-                            -->
-
+                            <li><a href='#/aordershistory'>Orders History</a></li>
+                            <li><a href='#/categories'>Categories</a></li>
                         </ul>
                         <ul class='nav navbar-nav navbar-right'>
                             <li><a href='#/cart'>Cart <span class='badge'>3</span></a></li>
-                            <li><a href='#/orders'>Orders History</a></li>
+                            <li><a href='#/orders'>You Orders</a></li>
                             <li><a href='#/profile'>Profile</a></li>
                             <li><a href='#/addresses'>Addresses</a></li>
                             <li><a href='#/logout'>Logout</a></li>
@@ -38,10 +37,8 @@
                 </div>
             </nav>
         </header>
-
         <article class='main-contetn' ng-view=''>
         </article>
-
         <footer></footer>
     </body>
 </html>
