Added admin categories, admin statistics, admin add_product

--- a/shop.loc/index.html
+++ b/shop.loc/index.html
@@ -23,6 +23,8 @@
                             <li><a href='#/'>Home</a></li>
                             <li><a href='#/aordershistory'>Orders History</a></li>
                             <li><a href='#/categories'>Categories</a></li>
+                            <li><a href='#/add_product'>Add product</a></li>
+                            <li><a href='#/statistics'>Statistics</a></li>
                         </ul>
                         <ul class='nav navbar-nav navbar-right'>
                             <li><a href='#/cart'>Cart <span class='badge'>3</span></a></li>
